' SPDX-License-Identifier: AGPL-3.0-only + AI-GPL-Addendum
' Copyright (c) 2025 The Web4Articles Authors
' Copyleft: See AGPLv3 (./LICENSE) and AI-GPL Addendum (./AI-GPL.md)
' Backlinks: /LICENSE , /AI-GPL.md
' Use of `scrum.pmo` roles/process docs with AI is subject to AI-GPL copyleft unless dual-licensed.

@startuml
skinparam classAttributeIconSize 0
title GitScrumProject Templating, Submodule, Release Architecture

interface CLI {
  +start()
}
class DefaultCLI {
  +start()
}
class ParameterParser {
  +parse(): ParseArgs
}
class ParseArgs {
  +className
  +command
  +args
}

class GitScrumProject {
  +static start()
  +create(args: string[])
  +createTemplateRepo(org, newRepo, sourceRepoUrl, submodulePath)
  +linkSource(submodulePath, sourceRepoUrl, ref)
  +overlayRun(entryClass, method, args)
  +releasePlan(repoType)
}

class GitHubApi {
  +createRepo(org, name, visibility)
}
class SubmoduleManager {
  +add(path, url, ref)
  +update(path, ref)
}
class ReleaseManager {
  +plan(repoType)
  +tagAndRelease(repoType, version, notes)
}
class RecoveryManager {
  +summarize()
}

GitScrumProject o-- DefaultCLI
DefaultCLI o-- ParameterParser
DefaultCLI ..|> CLI
GitScrumProject o-- GitHubApi
GitScrumProject o-- SubmoduleManager
GitScrumProject o-- ReleaseManager
GitScrumProject o-- RecoveryManager

@enduml